@@ -1,3 +1,10 @@
+2008-10-16  Edward Smith-Rowland  <3dw4rd@verizon.net>
+
+	* include/bits/forward_list.h: Factor list construction to dispatch
+	routines.
+	* include/bits/forward_list.tcc: Likewise.
+	* testsuite/23_containers/forward_list/modifiers/2.cc: 
+
 2008-10-16  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/bits/forward_list.tcc (operator==): Use auto.
